# gs3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shit/: main.cpp
src/: EOD.cpp  EOD.h  Timer.cpp  Timer.h  main.cpp
src/phys/: AABB.cpp  AABB.h  Vec3.cpp  Vec3.h
src/platform/: ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h
src/shaders/: VertexShader.glsl
